-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.1
-
3
-
12085
<0>LustreError: 5766:0:(ldlm_lock.c:851:ldlm_lock_decref_internal_nolock()) ASSERTION( lock->l_readers > 0 ) failed: ^M
<0>LustreError: 5766:0:(ldlm_lock.c:851:ldlm_lock_decref_internal_nolock()) LBUG^M
<4>Pid: 5766, comm: mdt00_020^M
<4>^M
<4>Call Trace:^M
<4> [<ffffffffa0414895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]^M
<4> [<ffffffffa0414e97>] lbug_with_loc+0x47/0xb0 [libcfs]^M
<4> [<ffffffffa06b03b2>] ldlm_lock_decref_internal_nolock+0xd2/0x180 [ptlrpc]^M
<4> [<ffffffffa06b4aad>] ldlm_lock_decref_internal+0x4d/0xaa0 [ptlrpc]^M
<4> [<ffffffffa054a315>] ? class_handle2object+0x95/0x190 [obdclass]^M
<4> [<ffffffffa06b5f69>] ldlm_lock_decref+0x39/0x90 [ptlrpc]^M
<4> [<ffffffffa0dd74a3>] mdt_save_lock+0x63/0x300 [mdt]^M
<4> [<ffffffffa06fd900>] ? lustre_swab_ldlm_reply+0x0/0x40 [ptlrpc]^M
<4> [<ffffffffa0dd779c>] mdt_object_unlock+0x5c/0x160 [mdt]^M
<4> [<ffffffffa0e05a4c>] mdt_object_open_unlock+0xac/0x110 [mdt]^M
<4> [<ffffffffa0e0c9b4>] mdt_reint_open+0xdd4/0x20e0 [mdt]^M
<4> [<ffffffffa0e0e34c>] mdt_reconstruct_open+0x68c/0xc30 [mdt]^M
<4> [<ffffffffa07226a6>] ? __req_capsule_get+0x166/0x700 [ptlrpc]^M
<4> [<ffffffffa06fb1ae>] ? lustre_pack_reply_flags+0xae/0x1f0 [ptlrpc]^M
<4> [<ffffffffa0e01195>] mdt_reconstruct+0x45/0x120 [mdt]^M
<4> [<ffffffffa0ddccfb>] mdt_reint_internal+0x6bb/0x780 [mdt]^M
<4> [<ffffffffa0ddd08d>] mdt_intent_reint+0x1ed/0x520 [mdt]^M
<4> [<ffffffffa0ddaf3e>] mdt_intent_policy+0x39e/0x720 [mdt]^M
<4> [<ffffffffa06b27e1>] ldlm_lock_enqueue+0x361/0x8d0 [ptlrpc]^M
<4> [<ffffffffa06d924f>] ldlm_handle_enqueue0+0x4ef/0x10b0 [ptlrpc]^M
<4> [<ffffffffa0ddb3c6>] mdt_enqueue+0x46/0xe0 [mdt]^M
<4> [<ffffffffa0de1ab7>] mdt_handle_common+0x647/0x16d0 [mdt]^M
<4> [<ffffffffa0e1b2b5>] mds_regular_handle+0x15/0x20 [mdt]^M
<4> [<ffffffffa070b428>] ptlrpc_server_handle_request+0x398/0xc60 [ptlrpc]^M
<4> [<ffffffffa04155de>] ? cfs_timer_arm+0xe/0x10 [libcfs]^M
<4> [<ffffffffa0426dbf>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]^M
<4> [<ffffffffa0702789>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]^M
<4> [<ffffffff810557f3>] ? __wake_up+0x53/0x70^M
<4> [<ffffffffa070c7be>] ptlrpc_main+0xace/0x1700 [ptlrpc]^M
<4> [<ffffffffa070bcf0>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]^M
<4> [<ffffffff8100c0ca>] child_rip+0xa/0x20^M
<4> [<ffffffffa070bcf0>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]^M
<4> [<ffffffffa070bcf0>] ? ptlrpc_main+0x0/0x1700 [ptlrpc]^M
<4> [<ffffffff8100c0c0>] ? child_rip+0x0/0x20^M
<4>^M